Time: 33 ms (73.56%), Space: 59.2 MB (66.12%) - LeetHub